Closed Bug 633347 Opened 15 years ago Closed 15 years ago

MethodClosure::equals(),hashKey() needs to not assert if the MC(s) are invalid

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stejohns, Unassigned)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Flash relies on being able to call these on no-longer-valid weak mc's; the asserts are disrupting debug builds.
Attachment #511535 - Flags: review?(rreitmai)
Comment on attachment 511535 [details] [diff] [review] Patch Switching to treilly as Rick is out sick
Attachment #511535 - Flags: review?(rreitmai) → review?(treilly)
Did we mean to also remove the NULL checking asserts? Seems those might still be valid. I don't see equals being used anywhere, should probably log a bug as a reminder to create some self tests.
(In reply to comment #2) > Did we mean to also remove the NULL checking asserts? Seems those might still > be valid. We check for null at runtime, the assert is redundant > I don't see equals being used anywhere, should probably log a bug as a reminder > to create some self tests. Agreed.
Attachment #511535 - Flags: review?(treilly) → review+
5927:b04639a0b81a
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: