Bug 633347 - MethodClosure::equals(),hashKey() needs to not assert if the MC(s) are invalid (r=treilly)